Adding Trip Query Specification and correcting model